--- a/templates/appStudOutput.html
+++ b/templates/appStudOutput.html
@@ -29,7 +29,7 @@
 <body>
     <center>
         <h1>SAVE SUCCESSFUL</h1>
-        <h2>Following Employee has been added to the database</h2>
+        <h2>Following Student has been added to the database</h2>
         <h2>{{ name }}</h2>
     </center>
 
