--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="main-block">
-        <form action="/addstud" autocomplete="on" method = "POST" enctype="multipart/form-data">
+        <form action="/addemp" autocomplete="on" method = "POST" enctype="multipart/form-data">
             <h1>Create a free account</h1>
             <fieldset>
                 <legend>
