--- a/templates/studentRegisterForm.html
+++ b/templates/studentRegisterForm.html
@@ -23,7 +23,7 @@
                     <div><label>Password*</label><input type="text" name="password" required></div>
                     <div><label>Student Name*</label><input type="text" name="stud_name" required></div>
                     <div><label>Repeat password*</label><input type="text" name="repeat-pwd" required></div>
-                    <div><label for="identityNumber">Identity (Number):</label><input type="text" id="stud_ic" name="stud_ic" placeholder="Enter identity number: 121312-12-7777" /></div>
+                    <div><label for="identityNumber">Identity (Number):</label><input type="text" id="stud_ic" name="stud_ic" placeholder="Enter identity number: 121312-12-7777" required/></div>
                     
                 </div>
             </fieldset>
