--- a/templates/studentRegisterForm.html
+++ b/templates/studentRegisterForm.html
@@ -38,7 +38,7 @@
                         <div><label>Current Address*</label><input type="text" name="stud_currAddress"></div>
                         <div><label>Home Address*</label><input type="text" name="stud_homeAddress" required></div>
                         <div><label>Student CGPA*</label><input type="number" id="stud_cgpa" name="stud_cgpa" step="0.01" pattern="[0-9]+(\.[0-9]+)?" placeholder="Enter a number with up to 2 decimal places" required></div>
-                        <div><label>Student Programme</label><input type="text" name="stud_program" placeholder="FOCS"></div>
+                        <div><label>Student Programme</label><input type="text" name="stud_program" placeholder="FOCS" required></div>
                     </div>
                     <div>
                         <div><label>Gender*</label><input type="text" name="stud_gender" required></div>
